# bbbuild

./: .gitignore  README.md  bbbuilder  bbbuilder.conf  buildmoode.sh  chrootbuild.sh  img2tar  publish_fsarchive  publish_image  runinchroot.sh  runinchroot_opt.sh
bbbs/: moode-empty-dev.bbb  moode-empty-prod.bbb  moode-empty.bbb  moode-r41.bbb  moode-r42.bbb  moode-r42p.bbb  moode-r42q.bbb  moode-r42u.bbb  moode-r42x.bbb  moode-r42y.bbb  moode-r43.bbb  moode-r44-mpd-0.21.bbb  moode-r44.bbb  moode-r45.bbb  moode-r50.bbb  moode-r50rc1.bbb  moode-r53-empty-dev.bbb  moode-r53-empty-prod.bbb  moode-r54-empty-dev.bbb  moode-r54-empty-prod.bbb  moode-r60-empty-dev.bbb  moode-r60-empty-prod.bbb
binaries/: bluez-5.49-binary.tar.xz  disable-obex.patch  volume-issue.patch
conf/: bbbuilder.conf  bbbuilder.conf.default
resources/: README.txt  bluetoothd_path_am.patch  libcdio.patch  remove-65a1a11-commit.patch  shairport-sync.conf
resources/bluetoothd/: bluetoothd_path_in.patch
resources/bluez-alsa/: bluez-alsa-1.3.0-iphone-aac.patch
resources/libldac/: Makefile  Makefile.am  configure.ac  libldacBT.pc.in  libldacBT_abr.pc.in
resources/libldac/deprecated/: Makefile
